Changed the dataset directory

--- a/Train_Detection_Model.ipynb
+++ b/Train_Detection_Model.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cd /content/drive/MyDrive/Colab Notebooks/CIS581/ESE360_Final"
+        "cd /content/drive/MyDrive/Colab Notebooks/"
       ],
       "metadata": {
         "colab": {
