dataset directory change

--- a/Train_Detection_Model.ipynb
+++ b/Train_Detection_Model.ipynb
@@ -56,7 +56,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/Colab Notebooks/CIS581/ESE360_Final\n"
+            "/content/drive/MyDrive/Colab Notebooks\n"
           ]
         }
       ]
